# trussel-hawaiian-english-dict

./: .gitignore  CLAUDE.md  package-lock.json  package.json  pyproject.toml
docs/: database-schema.md
reports/: cross_verification_corrected.json  cross_verification_report.json  phase4_asset_report.json  scaffolding_report.json  topical_parse_report.json
scripts/: batch_topical.py  build_image_manifest.py  cross_verify.py  extract_scaffolding.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/about/: page.tsx
src/app/browse/: page.tsx
src/app/concordance/: page.tsx
src/app/eng-haw/: page.tsx
src/app/favorites/: page.tsx
src/app/gloss-sources/: page.tsx
src/chd/: __init__.py  download.py  enums.py  export.py  links.py  models.py  pos_mapper.py  preprocess.py  seed.py  unicode.py  validate.py
src/components/: EntryCard.tsx  FavoriteButton.tsx  Footer.tsx  Header.tsx  LetterNav.tsx  MobileNav.tsx  SearchBar.tsx  SourceBadge.tsx  ThemeProvider.tsx  ThemeToggle.tsx  shared.tsx
src/lib/: queries.ts  topics.ts  types.ts
supabase/: config.toml
supabase/migrations/: 20260223222149_initial_schema.sql  20260225030559_phase2_5_tables.sql
tests/: conftest.py  test_image_parser.py  test_integration.py  test_links.py  test_models.py  test_page_haw_a.py  test_page_haw_e.py  test_page_haw_h.py  test_page_haw_k.py  test_preprocess.py  test_sense_parser.py  test_unicode.py
tests/fixtures/: entry_andrews.html  entry_bullets.html  entry_image.html  entry_loanword.html  entry_niihau.html  entry_pe_basic.html  example_basic.html  example_causative.html
(+38 files in other folders)
